# 0-toggle

./: CMakeLists.txt  Messages.sh  README  README.md
src/: CMakeLists.txt  org.kde.zerocontrol.appdata.xml  zerocontrol.cpp  zerocontrol.h
src/package/: metadata.desktop
src/package/contents/config/: main.xml
src/package/contents/ui/: FullRepresentation.qml  configGeneral.qml  main.qml
